@@ -1,3 +1,7 @@
+2022-11-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
+
 2021-08-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Date): Roll date
